-- Private build 4
- Create facility for RMIR to perform update of registry setting for Enhanced Power Management (Graham)
-- Private build 5
- Restructure the new registry update procedure as suggested by Dave Johnson (Graham)
- Minor change to Setup.sh for Linux, also re-named setup.sh to comply with Linux conventions (Bengt, Graham)

Changes for v2.09
-- Private build 1
- Set IrpTransmogrifier 1.1.0 as default IR decoder, with DecodeIR as selectable option (Graham)
- Make conversion of learned signals to device upgrade be reliable, and available only with IrpTransmogrifier (Graham)
- Improve summary menu, adding new items to view and save last created summary (Graham)
- Fix bug affecting some macros on URC-7935 (Graham)
-- Private build 2
- Fix longstanding obscure bug in SonyComboTranslator (Graham)
- Fix bugs in handling of qualifier string in uei-executor entries of IrpDatabase (Graham)
- Fix bug allowing DecodeIR to be selected as IR decoder when it is not present (Graham)
- Make pronto button, rather than learned button, be default on LearnedSignalDialog (Graham)
- Fix bug preventing button panel of LearnedSignalDialog showing unless Advanced Details selected (Graham)
- Add syntax for specifying priority entries in sequencer string of uei-executor entries without listing the others (Graham)
- Display version numbers of IrpTransmogrifier and IrpDatabase on Help > About menu (Graham)
- Correct the explanatory text in protocols.ini for Pioneer DVD and DVD2 protocols, which had set/clear for an OBC bit the wrong way round (Graham)
- Update to IrpTransmogrifier v1.1.1 with corresponding update to IrpDatabase.xml (Barf)
-- Private build 3
- Support XML in uei-executor parameters in IrpProtocols.xml (Barf, Graham)
-- Private build 4
- Minor tweaks to give full compliance with the draft Appendix 1 to IRP Specification (Graham)
-- Private build 5
- Update to IrpTransmogrifier v1.2.0 with corresponding update to IrpDatabase.xml (Barf)